--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/react": "^16.3.0"
   },
   "peerDependencies": {
-    "react": "^16.3.0"
+    "react": ">=16.3 <=17.x"
   },
   "dependencies": {
     "smooth-dnd": "0.12.1",
