--- a/package.json
+++ b/package.json
@@ -37,18 +37,18 @@
     "@babel/preset-env": "7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "7.3.3",
+    "@types/react": "^16.3.0",
     "rollup": "1.4.0",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-uglify": "6.0.2",
-    "typescript": "3.3.3333",
-    "@types/react": "^16.3.0"
+    "typescript": "3.3.3333"
   },
   "peerDependencies": {
     "react": ">=16.3 <=17.x"
   },
   "dependencies": {
-    "smooth-dnd": "0.12.1",
-    "prop-types":">=15.6.0"
+    "prop-types": ">=15.6.0",
+    "smooth-dnd": "0.12.1"
   }
 }
