--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@quangpq/react-smooth-dnd",
+  "name": "@madlogiclgw/react-smooth-dnd",
   "version": "0.11.1",
   "description": "Drag and Drop library",
   "main": "./dist/index.js",
@@ -22,14 +22,11 @@
     "draggable",
     "dnd"
   ],
-  "author": {
-    "name": "Kutlu Sahin",
-    "email": "kutlugsahin@gmail.com"
-  },
+  "author": "Kutlu Sahin <kutlugsahin@gmail.com>",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kutlugsahin/react-smooth-dnd.git"
+    "url": "git+https://github.com/kutlugsahin/react-smooth-dnd.git"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
@@ -50,5 +47,9 @@
   "dependencies": {
     "prop-types": ">=15.6.0",
     "smooth-dnd": "0.12.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/kutlugsahin/react-smooth-dnd/issues"
+  },
+  "homepage": "https://github.com/kutlugsahin/react-smooth-dnd#readme"
 }
